tests/compile_fail/no_std/runtime/thread_local.rs
use pui::make_counter;

make_counter! {
    threadlocal type _Runtime = u8;
}

fn main() {}
