tests/compile_fail/no_std/runtime/thread_local.stderr
error: the `std` feature on `pui` msut be turned on to allow thread local storage
 --> $DIR/thread_local.rs:3:1
  |
3 | / make_counter! {
4 | |     threadlocal type _Runtime = u8;
5 | | }
  | |_^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
